--- a/astro/index.html
+++ b/astro/index.html
@@ -6,9 +6,9 @@
     <title>KI-Ferien.de | Astro-Planer</title>
     <style>
         :root {
-            --glow-color: rgba(0, 150, 255, 0.8);
+            --glow-color: #0096ff;
             --text-gold: #ffcc00;
-            --bg-dark: #02040a;
+            --bg-deep: #02050a;
         }
 
         * { box-sizing: border-box; }
@@ -16,77 +16,54 @@
         body {
             margin: 0;
             padding: 0;
-            background-color: var(--bg-dark);
             color: white;
-            font-family: 'Segoe UI', Arial, sans-serif;
+            font-family: 'Segoe UI', Tahoma, sans-serif;
             min-height: 100vh;
             display: flex;
             justify-content: center;
             align-items: center;
-            overflow: hidden; /* Wichtig wegen des großen Schleiers */
-            position: relative;
+            overflow-x: hidden;
+            /* Der Schleier wird hier direkt als Hintergrund-Layer eingebaut */
+            background: 
+                radial-gradient(circle at 50% 50%, rgba(0, 100, 255, 0.15), transparent 60%),
+                radial-gradient(circle at 20% 80%, rgba(100, 0, 255, 0.1), transparent 50%),
+                var(--bg-deep);
+            background-attachment: fixed;
         }
 
-        /* --- EBENE 1: DER TIEFE HINTERGRUND --- */
-        .magic-bg {
+        /* --- STERNE PER CSS (Sicherer als externe Bilder) --- */
+        body::before {
+            content: "";
             position: fixed;
             top: 0; left: 0; width: 100%; height: 100%;
-            background: radial-gradient(circle at center, #0a1e3b 0%, #02040a 100%);
-            z-index: -10;
-        }
-
-        /* --- EBENE 2: DER MAGISCHE SCHLEIER (NEU!) --- */
-        .nebula-veil {
-            position: fixed;
-            top: 50%; left: 50%;
-            width: 200vmax; height: 200vmax; /* Sehr groß, damit er beim Drehen alles füllt */
-            transform: translate(-50%, -50%);
-            z-index: -5;
-            /* Ein subtiler Mix aus transparentem Blau und Violett */
-            background: radial-gradient(circle at center, rgba(0, 100, 255, 0.08) 0%, rgba(120, 0, 255, 0.05) 30%, transparent 60%);
-            animation: rotate-veil 150s linear infinite; /* Dreht sich sehr langsam */
-            pointer-events: none; /* Klicks gehen durch */
-        }
-
-        @keyframes rotate-veil {
-            from { transform: translate(-50%, -50%) rotate(0deg); }
-            to { transform: translate(-50%, -50%) rotate(360deg); }
-        }
-
-        /* --- EBENE 3: STERNE (CSS ONLY) --- */
-        .stars-overlay {
-            position: fixed;
-            top: 0; left: 0; width: 100%; height: 100%;
-            z-index: -2;
+            z-index: -1;
             background-image: 
-                radial-gradient(1px 1px at 10% 10%, #fff, transparent),
-                radial-gradient(1px 1px at 20% 50%, #fff, transparent),
-                radial-gradient(2px 2px at 40% 80%, #fff, transparent),
-                radial-gradient(1px 1px at 60% 20%, #fff, transparent),
-                radial-gradient(2px 2px at 80% 40%, #fff, transparent),
-                radial-gradient(1px 1px at 90% 70%, #fff, transparent);
-            background-size: 300px 300px;
-            opacity: 0.5;
-            animation: twinkle 6s infinite alternate;
+                radial-gradient(1px 1px at 25px 35px, white, transparent),
+                radial-gradient(1.5px 1.5px at 100px 200px, white, transparent),
+                radial-gradient(1px 1px at 300px 150px, white, transparent),
+                radial-gradient(2px 2px at 500px 400px, white, transparent),
+                radial-gradient(1px 1px at 150px 600px, white, transparent);
+            background-size: 400px 400px;
+            opacity: 0.3;
+            animation: twinkle 10s infinite alternate;
         }
 
         @keyframes twinkle {
-            from { opacity: 0.3; }
-            to { opacity: 0.6; }
+            from { opacity: 0.2; } to { opacity: 0.5; }
         }
 
-        /* --- EBENE 4: VORDERGRUND INHALT --- */
+        /* --- LAYOUT STRUKTUR --- */
         .main-container {
+            position: relative;
+            z-index: 10; /* Zwingt den Inhalt nach vorne */
             display: flex;
             flex-direction: row;
             align-items: center;
             justify-content: center;
             gap: 40px;
             width: 100%;
-            max-width: 1200px;
+            max-width: 1250px;
             padding: 20px;
-            z-index: 100; /* Sicher ganz vorne */
-            position: relative;
         }
 
         .zodiac-column {
@@ -104,19 +81,19 @@
             border-radius: 12px;
             cursor: pointer;
             transition: 0.3s;
-            backdrop-filter: blur(8px); /* Milchglas-Effekt verstärkt */
+            backdrop-filter: blur(10px);
         }
 
         .zodiac-card:hover, .zodiac-card.active {
             border-color: var(--glow-color);
-            background: rgba(0, 150, 255, 0.15);
+            background: rgba(0, 150, 255, 0.2);
             box-shadow: 0 0 20px var(--glow-color);
             transform: scale(1.05);
         }
 
-        .zodiac-symbol { font-size: 2rem; color: var(--text-gold); display: block; text-shadow: 0 0 10px rgba(255,204,0,0.5); }
+        .zodiac-symbol { font-size: 2rem; color: var(--text-gold); display: block; }
         .zodiac-name { font-weight: bold; display: block; margin-top: 5px; font-size: 0.9rem; }
-        .zodiac-date { font-size: 0.7rem; opacity: 0.7; }
+        .zodiac-date { font-size: 0.75rem; opacity: 0.7; }
 
         /* --- DIE RUNDE GLASKUGEL --- */
         .crystal-ball-container {
@@ -128,7 +105,149 @@
             align-items: center;
             position: relative;
         }
-        
-        /* Leichter Schein hinter der Kugel */
-        .crystal-ball-container::before {
-             content: ''; position
+
+        .crystal-ball {
+            width: 100%;
+            height: 100%;
+            border-radius: 50%;
+            /* Glas-Effekt mit Lichtbrechung */
+            background: radial-gradient(circle at 35% 35%, 
+                        rgba(255, 255, 255, 0.3) 0%, 
+                        rgba(0, 150, 255, 0.1) 40%, 
+                        rgba(0, 5, 20, 0.8) 90%);
+            box-shadow: 0 0 60px var(--glow-color), 
+                        inset 0 0 40px rgba(255, 255, 255, 0.1);
+            border: 1px solid rgba(255, 255, 255, 0.2);
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+            text-align: center;
+            padding: 40px;
+            animation: pulse 5s infinite ease-in-out;
+        }
+
+        @keyframes pulse {
+            0%, 100% { transform: scale(1); box-shadow: 0 0 60px var(--glow-color); }
+            50% { transform: scale(1.02); box-shadow: 0 0 85px var(--glow-color); }
+        }
+
+        .ball-content h1 { font-size: 1.8rem; margin: 0; text-shadow: 0 0 15px var(--glow-color); }
+        .ball-content p { font-size: 1rem; margin: 20px 0; min-height: 3em; line-height: 1.4; }
+
+        .btn-astro {
+            background: linear-gradient(45deg, #0078ff, #00c3ff);
+            border: none;
+            padding: 12px 25px;
+            color: white;
+            border-radius: 30px;
+            cursor: pointer;
+            font-weight: bold;
+            text-transform: uppercase;
+            letter-spacing: 1px;
+            box-shadow: 0 5px 15px rgba(0, 120, 255, 0.4);
+            transition: 0.3s;
+        }
+
+        .btn-astro:hover { transform: translateY(-3px); box-shadow: 0 8px 25px rgba(0, 120, 255, 0.6); }
+
+        /* Mobile Ansicht */
+        @media (max-width: 900px) {
+            .main-container { flex-direction: column; padding: 50px 10px; }
+            .zodiac-column { flex-direction: row; flex-wrap: wrap; justify-content: center; width: 100%; }
+            .crystal-ball-container { width: 300px; height: 300px; order: -1; }
+        }
+    </style>
+</head>
+<body>
+
+    <main class="main-container">
+        <div class="zodiac-column">
+            <div class="zodiac-card" onclick="updateBall('widder')">
+                <span class="zodiac-symbol">♈</span><span class="zodiac-name">Widder</span><span class="zodiac-date">21.03.-20.04.</span>
+            </div>
+            <div class="zodiac-card" onclick="updateBall('stier')">
+                <span class="zodiac-symbol">♉</span><span class="zodiac-name">Stier</span><span class="zodiac-date">21.04.-20.05.</span>
+            </div>
+            <div class="zodiac-card" onclick="updateBall('zwillinge')">
+                <span class="zodiac-symbol">♊</span><span class="zodiac-name">Zwillinge</span><span class="zodiac-date">21.05.-21.06.</span>
+            </div>
+            <div class="zodiac-card" onclick="updateBall('krebs')">
+                <span class="zodiac-symbol">♋</span><span class="zodiac-name">Krebs</span><span class="zodiac-date">22.06.-22.07.</span>
+            </div>
+            <div class="zodiac-card" onclick="updateBall('loewe')">
+                <span class="zodiac-symbol">♌</span><span class="zodiac-name">Löwe</span><span class="zodiac-date">23.07.-23.08.</span>
+            </div>
+            <div class="zodiac-card" onclick="updateBall('jungfrau')">
+                <span class="zodiac-symbol">♍</span><span class="zodiac-name">Jungfrau</span><span class="zodiac-date">24.08.-23.09.</span>
+            </div>
+        </div>
+
+        <div class="crystal-ball-container">
+            <div class="crystal-ball">
+                <div class="ball-content">
+                    <h1 id="ball-title">KI-FERIEN</h1>
+                    <p id="ball-text">Wähle dein Sternzeichen für deine kosmische Reise.</p>
+                    <button class="btn-astro" id="astro-btn" onclick="startTravel()">Sternenreise planen</button>
+                </div>
+            </div>
+        </div>
+
+        <div class="zodiac-column">
+            <div class="zodiac-card" onclick="updateBall('waage')">
+                <span class="zodiac-symbol">♎</span><span class="zodiac-name">Waage</span><span class="zodiac-date">24.09.-23.10.</span>
+            </div>
+            <div class="zodiac-card" onclick="updateBall('skorpion')">
+                <span class="zodiac-symbol">♏</span><span class="zodiac-name">Skorpion</span><span class="zodiac-date">24.10.-22.11.</span>
+            </div>
+            <div class="zodiac-card" onclick="updateBall('schuetze')">
+                <span class="zodiac-symbol">♐</span><span class="zodiac-name">Schütze</span><span class="zodiac-date">23.11.-21.12.</span>
+            </div>
+            <div class="zodiac-card" onclick="updateBall('steinbock')">
+                <span class="zodiac-symbol">♑</span><span class="zodiac-name">Steinbock</span><span class="zodiac-date">22.12.-20.01.</span>
+            </div>
+            <div class="zodiac-card" onclick="updateBall('wassermann')">
+                <span class="zodiac-symbol">♒</span><span class="zodiac-name">Wassermann</span><span class="zodiac-date">21.01.-19.02.</span>
+            </div>
+            <div class="zodiac-card" onclick="updateBall('fische')">
+                <span class="zodiac-symbol">♓</span><span class="zodiac-name">Fische</span><span class="zodiac-date">20.02.-20.03.</span>
+            </div>
+        </div>
+    </main>
+
+    <script>
+        const config = {
+            widder: { t: "Widder Energie", p: "Action, Abenteuer und feurige Ferienziele." },
+            stier: { t: "Stier Genuss", p: "Wellness, Natur und kulinarische Entdeckungen." },
+            zwillinge: { t: "Zwillinge Spirit", p: "Pulsierende Städte und kulturelle Vielfalt." },
+            krebs: { t: "Krebs Romantik", p: "Idyllische Plätze am Wasser und pure Geborgenheit." },
+            loewe: { t: "Löwen Glanz", p: "Luxus, Sonne und Ferien wie ein Royal." },
+            jungfrau: { t: "Jungfrau Fokus", p: "Nachhaltigkeit, Wandern und klare Sternennächte." },
+            waage: { t: "Waage Balance", p: "Stilvolle Ästhetik und harmonische Ferienorte." },
+            skorpion: { t: "Skorpion Mystik", p: "Geheimnisvolle Orte und intensive Erlebnisse." },
+            schuetze: { t: "Schützen Fernweh", p: "Große Expeditionen und Freiheit ohne Grenzen." },
+            steinbock: { t: "Steinbock Ruhe", p: "Gipfelmomente, Stille und klare Bergluft." },
+            wassermann: { t: "Wassermann Vision", p: "Innovative Konzepte und unkonventionelle Reisen." },
+            fische: { t: "Fische Träume", p: "Magische Inseln und Ferien zwischen Himmel und Meer." }
+        };
+
+        let selected = "";
+
+        function updateBall(sign) {
+            selected = sign;
+            document.getElementById('ball-title').innerText = config[sign].t;
+            document.getElementById('ball-text').innerText = config[sign].p;
+            
+            // Markierung der aktiven Karte
+            document.querySelectorAll('.zodiac-card').forEach(c => c.classList.remove('active'));
+            event.currentTarget.classList.add('active');
+        }
+
+        function startTravel() {
+            if(!selected) { alert("Bitte wähle dein Sternzeichen!"); return; }
+            // Direkte Weiterleitung mit deiner Travelpayouts ID 698672
+            window.location.href = "https://ki-ferien.de/" + selected + "?marker=698672";
+        }
+    </script>
+</body>
+</html>
