--- a/astro/index.html
+++ b/astro/index.html
@@ -3,10 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>KI-Ferien.de | Astro-Planer</title>
+    <title>KI-Ferien.de | Dein Astro-Planer</title>
     <style>
         :root {
             --glow-color: #0096ff;
+            --mystic-purple: rgba(120, 0, 255, 0.2);
             --text-gold: #ffcc00;
             --bg-deep: #02050a;
         }
@@ -16,6 +17,7 @@
         body {
             margin: 0;
             padding: 0;
+            background-color: var(--bg-deep);
             color: white;
             font-family: 'Segoe UI', Tahoma, sans-serif;
             min-height: 100vh;
@@ -23,39 +25,55 @@
             justify-content: center;
             align-items: center;
             overflow-x: hidden;
-            /* Der Schleier wird hier direkt als Hintergrund-Layer eingebaut */
-            background: 
-                radial-gradient(circle at 50% 50%, rgba(0, 100, 255, 0.15), transparent 60%),
-                radial-gradient(circle at 20% 80%, rgba(100, 0, 255, 0.1), transparent 50%),
-                var(--bg-deep);
-            background-attachment: fixed;
+            position: relative;
         }
 
-        /* --- STERNE PER CSS (Sicherer als externe Bilder) --- */
-        body::before {
-            content: "";
+        /* --- MYSTISCHER NEBEL --- */
+        .nebula {
+            position: fixed;
+            top: 0; left: 0; width: 100%; height: 100%;
+            background: 
+                radial-gradient(circle at 20% 30%, var(--mystic-purple), transparent 50%),
+                radial-gradient(circle at 80% 70%, rgba(0, 150, 255, 0.15), transparent 50%);
+            filter: blur(60px);
+            z-index: -2;
+            animation: nebulaPulse 15s infinite alternate ease-in-out;
+        }
+
+        @keyframes nebulaPulse {
+            from { opacity: 0.5; transform: scale(1); }
+            to { opacity: 0.8; transform: scale(1.1); }
+        }
+
+        /* --- VIEL MEHR STERNE --- */
+        .stars-container {
             position: fixed;
             top: 0; left: 0; width: 100%; height: 100%;
             z-index: -1;
+            /* Drei Schichten Sterne für mehr Tiefe */
             background-image: 
-                radial-gradient(1px 1px at 25px 35px, white, transparent),
-                radial-gradient(1.5px 1.5px at 100px 200px, white, transparent),
-                radial-gradient(1px 1px at 300px 150px, white, transparent),
-                radial-gradient(2px 2px at 500px 400px, white, transparent),
-                radial-gradient(1px 1px at 150px 600px, white, transparent);
-            background-size: 400px 400px;
-            opacity: 0.3;
-            animation: twinkle 10s infinite alternate;
+                radial-gradient(1px 1px at 10% 20%, #fff, transparent),
+                radial-gradient(1.5px 1.5px at 30% 40%, #fff, transparent),
+                radial-gradient(1px 1px at 50% 10%, #fff, transparent),
+                radial-gradient(2px 2px at 70% 80%, #fff, transparent),
+                radial-gradient(1px 1px at 90% 30%, #fff, transparent),
+                radial-gradient(1.5px 1.5px at 15% 75%, #fff, transparent),
+                radial-gradient(1px 1px at 45% 65%, #fff, transparent),
+                radial-gradient(2px 2px at 85% 15%, #fff, transparent);
+            background-size: 350px 350px;
+            animation: twinkle 8s infinite alternate;
         }
 
         @keyframes twinkle {
-            from { opacity: 0.2; } to { opacity: 0.5; }
+            0% { opacity: 0.2; }
+            50% { opacity: 0.6; }
+            100% { opacity: 0.3; }
         }
 
-        /* --- LAYOUT STRUKTUR --- */
+        /* --- LAYOUT --- */
         .main-container {
             position: relative;
-            z-index: 10; /* Zwingt den Inhalt nach vorne */
+            z-index: 10;
             display: flex;
             flex-direction: row;
             align-items: center;
@@ -74,31 +92,31 @@
         }
 
         .zodiac-card {
-            background: rgba(255, 255, 255, 0.05);
-            border: 1px solid rgba(255, 255, 255, 0.15);
+            background: rgba(255, 255, 255, 0.04);
+            border: 1px solid rgba(255, 255, 255, 0.1);
             padding: 12px;
             text-align: center;
             border-radius: 12px;
             cursor: pointer;
             transition: 0.3s;
-            backdrop-filter: blur(10px);
+            backdrop-filter: blur(12px);
         }
 
         .zodiac-card:hover, .zodiac-card.active {
             border-color: var(--glow-color);
-            background: rgba(0, 150, 255, 0.2);
-            box-shadow: 0 0 20px var(--glow-color);
-            transform: scale(1.05);
+            background: rgba(0, 150, 255, 0.15);
+            box-shadow: 0 0 25px var(--glow-color);
+            transform: scale(1.08);
         }
 
-        .zodiac-symbol { font-size: 2rem; color: var(--text-gold); display: block; }
-        .zodiac-name { font-weight: bold; display: block; margin-top: 5px; font-size: 0.9rem; }
+        .zodiac-symbol { font-size: 2.2rem; color: var(--text-gold); display: block; text-shadow: 0 0 10px rgba(255, 204, 0, 0.5); }
+        .zodiac-name { font-weight: bold; display: block; margin-top: 5px; font-size: 0.95rem; letter-spacing: 0.5px; }
         .zodiac-date { font-size: 0.75rem; opacity: 0.7; }
 
-        /* --- DIE RUNDE GLASKUGEL --- */
+        /* --- GLASKUGEL --- */
         .crystal-ball-container {
-            width: 380px;
-            height: 380px;
+            width: 400px;
+            height: 400px;
             flex-shrink: 0;
             display: flex;
             justify-content: center;
@@ -110,56 +128,57 @@
             width: 100%;
             height: 100%;
             border-radius: 50%;
-            /* Glas-Effekt mit Lichtbrechung */
             background: radial-gradient(circle at 35% 35%, 
                         rgba(255, 255, 255, 0.3) 0%, 
                         rgba(0, 150, 255, 0.1) 40%, 
-                        rgba(0, 5, 20, 0.8) 90%);
-            box-shadow: 0 0 60px var(--glow-color), 
-                        inset 0 0 40px rgba(255, 255, 255, 0.1);
-            border: 1px solid rgba(255, 255, 255, 0.2);
+                        rgba(0, 5, 20, 0.85) 90%);
+            box-shadow: 0 0 70px var(--glow-color), 
+                        inset 0 0 50px rgba(255, 255, 255, 0.1);
+            border: 2px solid rgba(255, 255, 255, 0.2);
             display: flex;
             flex-direction: column;
             justify-content: center;
             align-items: center;
             text-align: center;
-            padding: 40px;
-            animation: pulse 5s infinite ease-in-out;
+            padding: 45px;
+            animation: sphereFloat 6s infinite ease-in-out;
         }
 
-        @keyframes pulse {
-            0%, 100% { transform: scale(1); box-shadow: 0 0 60px var(--glow-color); }
-            50% { transform: scale(1.02); box-shadow: 0 0 85px var(--glow-color); }
+        @keyframes sphereFloat {
+            0%, 100% { transform: translateY(0) scale(1); box-shadow: 0 0 70px var(--glow-color); }
+            50% { transform: translateY(-10px) scale(1.01); box-shadow: 0 0 90px var(--glow-color); }
         }
 
-        .ball-content h1 { font-size: 1.8rem; margin: 0; text-shadow: 0 0 15px var(--glow-color); }
-        .ball-content p { font-size: 1rem; margin: 20px 0; min-height: 3em; line-height: 1.4; }
+        .ball-content h1 { font-size: 2rem; margin: 0; text-shadow: 0 0 15px var(--glow-color); letter-spacing: 1.5px; }
+        .ball-content p { font-size: 1.05rem; margin: 20px 0; min-height: 3.5em; line-height: 1.4; opacity: 0.9; }
 
         .btn-astro {
             background: linear-gradient(45deg, #0078ff, #00c3ff);
             border: none;
-            padding: 12px 25px;
+            padding: 14px 28px;
             color: white;
-            border-radius: 30px;
+            border-radius: 35px;
             cursor: pointer;
             font-weight: bold;
             text-transform: uppercase;
             letter-spacing: 1px;
-            box-shadow: 0 5px 15px rgba(0, 120, 255, 0.4);
+            box-shadow: 0 5px 20px rgba(0, 120, 255, 0.5);
             transition: 0.3s;
         }
 
-        .btn-astro:hover { transform: translateY(-3px); box-shadow: 0 8px 25px rgba(0, 120, 255, 0.6); }
+        .btn-astro:hover { transform: translateY(-3px) scale(1.05); filter: brightness(1.2); }
 
-        /* Mobile Ansicht */
-        @media (max-width: 900px) {
-            .main-container { flex-direction: column; padding: 50px 10px; }
+        @media (max-width: 950px) {
+            .main-container { flex-direction: column; padding: 60px 10px; }
             .zodiac-column { flex-direction: row; flex-wrap: wrap; justify-content: center; width: 100%; }
-            .crystal-ball-container { width: 300px; height: 300px; order: -1; }
+            .crystal-ball-container { width: 320px; height: 320px; order: -1; }
         }
     </style>
 </head>
 <body>
+
+    <div class="nebula"></div>
+    <div class="stars-container"></div>
 
     <main class="main-container">
         <div class="zodiac-column">
@@ -187,7 +206,7 @@
             <div class="crystal-ball">
                 <div class="ball-content">
                     <h1 id="ball-title">KI-FERIEN</h1>
-                    <p id="ball-text">Wähle dein Sternzeichen für deine kosmische Reise.</p>
+                    <p id="ball-text">Entdecke magische Ferienorte, die zu deinen Sternen passen.</p>
                     <button class="btn-astro" id="astro-btn" onclick="startTravel()">Sternenreise planen</button>
                 </div>
             </div>
@@ -217,37 +236,9 @@
 
     <script>
         const config = {
-            widder: { t: "Widder Energie", p: "Action, Abenteuer und feurige Ferienziele." },
-            stier: { t: "Stier Genuss", p: "Wellness, Natur und kulinarische Entdeckungen." },
-            zwillinge: { t: "Zwillinge Spirit", p: "Pulsierende Städte und kulturelle Vielfalt." },
-            krebs: { t: "Krebs Romantik", p: "Idyllische Plätze am Wasser und pure Geborgenheit." },
-            loewe: { t: "Löwen Glanz", p: "Luxus, Sonne und Ferien wie ein Royal." },
-            jungfrau: { t: "Jungfrau Fokus", p: "Nachhaltigkeit, Wandern und klare Sternennächte." },
-            waage: { t: "Waage Balance", p: "Stilvolle Ästhetik und harmonische Ferienorte." },
-            skorpion: { t: "Skorpion Mystik", p: "Geheimnisvolle Orte und intensive Erlebnisse." },
-            schuetze: { t: "Schützen Fernweh", p: "Große Expeditionen und Freiheit ohne Grenzen." },
-            steinbock: { t: "Steinbock Ruhe", p: "Gipfelmomente, Stille und klare Bergluft." },
-            wassermann: { t: "Wassermann Vision", p: "Innovative Konzepte und unkonventionelle Reisen." },
-            fische: { t: "Fische Träume", p: "Magische Inseln und Ferien zwischen Himmel und Meer." }
-        };
-
-        let selected = "";
-
-        function updateBall(sign) {
-            selected = sign;
-            document.getElementById('ball-title').innerText = config[sign].t;
-            document.getElementById('ball-text').innerText = config[sign].p;
-            
-            // Markierung der aktiven Karte
-            document.querySelectorAll('.zodiac-card').forEach(c => c.classList.remove('active'));
-            event.currentTarget.classList.add('active');
-        }
-
-        function startTravel() {
-            if(!selected) { alert("Bitte wähle dein Sternzeichen!"); return; }
-            // Direkte Weiterleitung mit deiner Travelpayouts ID 698672
-            window.location.href = "https://ki-ferien.de/" + selected + "?marker=698672";
-        }
-    </script>
-</body>
-</html>
+            widder: { t: "Widder Energie", p: "Action, Abenteuer und feurige Horizonte erwarten dich." },
+            stier: { t: "Stier Genuss", p: "Sinnliche Naturerlebnisse und Wellness unter Sternen." },
+            zwillinge: { t: "Zwillinge Spirit", p: "Pulsierende Entdeckungen und kosmische Inspiration." },
+            krebs: { t: "Krebs Romantik", p: "Geborgenheit an magischen Orten direkt am Wasser." },
+            loewe: { t: "Löwen Glanz", p: "Luxuriöse Momente im hellsten Sternenlicht." },
+            jungfrau: { t: "Jungfrau Fokus", p: "Klare Bergluft und
