--- a/astro/index.html
+++ b/astro/index.html
@@ -15,161 +15,90 @@
         * { box-sizing: border-box; }
 
         body {
-            margin: 0;
-            padding: 0;
+            margin: 0; padding: 0;
             background-color: var(--bg-deep);
             color: white;
             font-family: 'Segoe UI', Tahoma, sans-serif;
             min-height: 100vh;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            overflow-x: hidden;
-            position: relative;
+            display: flex; justify-content: center; align-items: center;
+            overflow-x: hidden; position: relative;
         }
 
-        /* --- MYSTISCHER NEBEL --- */
+        /* Hintergrund-Effekte */
         .nebula {
-            position: fixed;
-            top: 0; left: 0; width: 100%; height: 100%;
-            background: 
-                radial-gradient(circle at 20% 30%, var(--mystic-purple), transparent 50%),
-                radial-gradient(circle at 80% 70%, rgba(0, 150, 255, 0.15), transparent 50%);
-            filter: blur(60px);
-            z-index: -2;
+            position: fixed; top: 0; left: 0; width: 100%; height: 100%;
+            background: radial-gradient(circle at 20% 30%, var(--mystic-purple), transparent 50%),
+                        radial-gradient(circle at 80% 70%, rgba(0, 150, 255, 0.15), transparent 50%);
+            filter: blur(60px); z-index: -2;
             animation: nebulaPulse 15s infinite alternate ease-in-out;
         }
+        @keyframes nebulaPulse { from { opacity: 0.5; } to { opacity: 0.8; } }
 
-        @keyframes nebulaPulse {
-            from { opacity: 0.5; transform: scale(1); }
-            to { opacity: 0.8; transform: scale(1.1); }
-        }
-
-        /* --- VIEL MEHR STERNE --- */
         .stars-container {
-            position: fixed;
-            top: 0; left: 0; width: 100%; height: 100%;
+            position: fixed; top: 0; left: 0; width: 100%; height: 100%;
             z-index: -1;
-            /* Drei Schichten Sterne für mehr Tiefe */
             background-image: 
                 radial-gradient(1px 1px at 10% 20%, #fff, transparent),
                 radial-gradient(1.5px 1.5px at 30% 40%, #fff, transparent),
-                radial-gradient(1px 1px at 50% 10%, #fff, transparent),
                 radial-gradient(2px 2px at 70% 80%, #fff, transparent),
-                radial-gradient(1px 1px at 90% 30%, #fff, transparent),
-                radial-gradient(1.5px 1.5px at 15% 75%, #fff, transparent),
-                radial-gradient(1px 1px at 45% 65%, #fff, transparent),
-                radial-gradient(2px 2px at 85% 15%, #fff, transparent);
+                radial-gradient(1px 1px at 90% 30%, #fff, transparent);
             background-size: 350px 350px;
             animation: twinkle 8s infinite alternate;
         }
+        @keyframes twinkle { from { opacity: 0.2; } to { opacity: 0.5; } }
 
-        @keyframes twinkle {
-            0% { opacity: 0.2; }
-            50% { opacity: 0.6; }
-            100% { opacity: 0.3; }
-        }
-
-        /* --- LAYOUT --- */
         .main-container {
-            position: relative;
-            z-index: 10;
-            display: flex;
-            flex-direction: row;
-            align-items: center;
-            justify-content: center;
-            gap: 40px;
-            width: 100%;
-            max-width: 1250px;
-            padding: 20px;
+            position: relative; z-index: 10;
+            display: flex; flex-direction: row; align-items: center; justify-content: center;
+            gap: 40px; width: 100%; max-width: 1250px; padding: 20px;
         }
 
-        .zodiac-column {
-            display: flex;
-            flex-direction: column;
-            gap: 12px;
-            width: 180px;
-        }
+        .zodiac-column { display: flex; flex-direction: column; gap: 12px; width: 180px; }
 
         .zodiac-card {
             background: rgba(255, 255, 255, 0.04);
             border: 1px solid rgba(255, 255, 255, 0.1);
-            padding: 12px;
-            text-align: center;
-            border-radius: 12px;
-            cursor: pointer;
-            transition: 0.3s;
-            backdrop-filter: blur(12px);
+            padding: 12px; text-align: center; border-radius: 12px;
+            cursor: pointer; transition: 0.3s; backdrop-filter: blur(12px);
         }
 
         .zodiac-card:hover, .zodiac-card.active {
-            border-color: var(--glow-color);
-            background: rgba(0, 150, 255, 0.15);
-            box-shadow: 0 0 25px var(--glow-color);
-            transform: scale(1.08);
+            border-color: var(--glow-color); background: rgba(0, 150, 255, 0.15);
+            box-shadow: 0 0 25px var(--glow-color); transform: scale(1.08);
         }
 
-        .zodiac-symbol { font-size: 2.2rem; color: var(--text-gold); display: block; text-shadow: 0 0 10px rgba(255, 204, 0, 0.5); }
-        .zodiac-name { font-weight: bold; display: block; margin-top: 5px; font-size: 0.95rem; letter-spacing: 0.5px; }
+        .zodiac-symbol { font-size: 2.2rem; color: var(--text-gold); display: block; }
+        .zodiac-name { font-weight: bold; display: block; margin-top: 5px; font-size: 0.95rem; }
         .zodiac-date { font-size: 0.75rem; opacity: 0.7; }
 
-        /* --- GLASKUGEL --- */
         .crystal-ball-container {
-            width: 400px;
-            height: 400px;
-            flex-shrink: 0;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            position: relative;
+            width: 400px; height: 400px; flex-shrink: 0;
+            display: flex; justify-content: center; align-items: center; position: relative;
         }
 
         .crystal-ball {
-            width: 100%;
-            height: 100%;
-            border-radius: 50%;
-            background: radial-gradient(circle at 35% 35%, 
-                        rgba(255, 255, 255, 0.3) 0%, 
-                        rgba(0, 150, 255, 0.1) 40%, 
-                        rgba(0, 5, 20, 0.85) 90%);
-            box-shadow: 0 0 70px var(--glow-color), 
-                        inset 0 0 50px rgba(255, 255, 255, 0.1);
+            width: 100%; height: 100%; border-radius: 50%;
+            background: radial-gradient(circle at 35% 35%, rgba(255,255,255,0.3) 0%, rgba(0,150,255,0.1) 40%, rgba(0,5,20,0.85) 90%);
+            box-shadow: 0 0 70px var(--glow-color), inset 0 0 50px rgba(255,255,255,0.1);
             border: 2px solid rgba(255, 255, 255, 0.2);
-            display: flex;
-            flex-direction: column;
-            justify-content: center;
-            align-items: center;
-            text-align: center;
-            padding: 45px;
-            animation: sphereFloat 6s infinite ease-in-out;
+            display: flex; flex-direction: column; justify-content: center; align-items: center;
+            text-align: center; padding: 45px; animation: sphereFloat 6s infinite ease-in-out;
         }
+        @keyframes sphereFloat { 0%, 100% { transform: translateY(0); } 50% { transform: translateY(-10px); } }
 
-        @keyframes sphereFloat {
-            0%, 100% { transform: translateY(0) scale(1); box-shadow: 0 0 70px var(--glow-color); }
-            50% { transform: translateY(-10px) scale(1.01); box-shadow: 0 0 90px var(--glow-color); }
-        }
-
-        .ball-content h1 { font-size: 2rem; margin: 0; text-shadow: 0 0 15px var(--glow-color); letter-spacing: 1.5px; }
-        .ball-content p { font-size: 1.05rem; margin: 20px 0; min-height: 3.5em; line-height: 1.4; opacity: 0.9; }
+        .ball-content h1 { font-size: 2rem; margin: 0; text-shadow: 0 0 15px var(--glow-color); }
+        .ball-content p { font-size: 1.05rem; margin: 20px 0; min-height: 3.5em; line-height: 1.4; }
 
         .btn-astro {
             background: linear-gradient(45deg, #0078ff, #00c3ff);
-            border: none;
-            padding: 14px 28px;
-            color: white;
-            border-radius: 35px;
-            cursor: pointer;
-            font-weight: bold;
-            text-transform: uppercase;
-            letter-spacing: 1px;
-            box-shadow: 0 5px 20px rgba(0, 120, 255, 0.5);
-            transition: 0.3s;
+            border: none; padding: 14px 28px; color: white; border-radius: 35px;
+            cursor: pointer; font-weight: bold; text-transform: uppercase;
+            box-shadow: 0 5px 20px rgba(0, 120, 255, 0.5); transition: 0.3s;
         }
-
-        .btn-astro:hover { transform: translateY(-3px) scale(1.05); filter: brightness(1.2); }
+        .btn-astro:hover { transform: translateY(-3px); filter: brightness(1.2); }
 
         @media (max-width: 950px) {
-            .main-container { flex-direction: column; padding: 60px 10px; }
+            .main-container { flex-direction: column; padding-top: 60px; }
             .zodiac-column { flex-direction: row; flex-wrap: wrap; justify-content: center; width: 100%; }
             .crystal-ball-container { width: 320px; height: 320px; order: -1; }
         }
@@ -238,7 +167,4 @@
         const config = {
             widder: { t: "Widder Energie", p: "Action, Abenteuer und feurige Horizonte erwarten dich." },
             stier: { t: "Stier Genuss", p: "Sinnliche Naturerlebnisse und Wellness unter Sternen." },
-            zwillinge: { t: "Zwillinge Spirit", p: "Pulsierende Entdeckungen und kosmische Inspiration." },
-            krebs: { t: "Krebs Romantik", p: "Geborgenheit an magischen Orten direkt am Wasser." },
-            loewe: { t: "Löwen Glanz", p: "Luxuriöse Momente im hellsten Sternenlicht." },
-            jungfrau: { t: "Jungfrau Fokus", p: "Klare Bergluft und
+            zw
